# LyriMotion

./: .gitignore  README.md  download_checkpoints.py  main.py  pyproject.toml
lyrimotion/: __init__.py  constant.py  data.py  image_generator.py  llm.py  lyri_motion.py  utils.py
